--- a/manage.html
+++ b/manage.html
@@ -119,7 +119,7 @@
         function findNextValidDate(startDate, dayType) {
             let nextDate = new Date(startDate);
             nextDate.setDate(nextDate.getDate() + 1);
-            while (!isValidDay(nextDate, dayType)) {
+            while (!isValidDay(nextDate, dayType) && nextDate <= new Date('2030-12-31')) {
                 nextDate.setDate(nextDate.getDate() + 1);
             }
             return nextDate;
@@ -135,32 +135,52 @@
             }
             let currentDate = resumeDate ? new Date(resumeDate) : new Date(startDate);
             let cycleCount = 0;
+            let expectedDates = [];
 
             while (currentDate <= endDate) {
                 if (isValidDay(currentDate, dayType)) {
                     let validDaysAdded = 0;
                     let tempDate = new Date(currentDate);
+                    let cycleDates = [];
                     while (validDaysAdded < durationDays && tempDate <= endDate) {
                         if (isValidDay(tempDate, dayType)) {
-                            events[scheduleName].dates.push({ date: tempDate.toISOString().split('T')[0], title: eventTitle });
+                            const dateStr = tempDate.toISOString().split('T')[0];
+                            cycleDates.push({ date: dateStr, title: eventTitle });
                             validDaysAdded++;
                         }
                         tempDate = findNextValidDate(tempDate, dayType);
                     }
                     if (validDaysAdded < durationDays) break;
-                    // 고정 주기 적용
+                    events[scheduleName].dates.push(...cycleDates);
+                    expectedDates.push(cycleDates[0].date);
+                    // 다음 주기 계산
                     currentDate.setDate(currentDate.getDate() + cycleDays);
-                    currentDate = findNextValidDate(new Date(currentDate.getTime() - 24 * 60 * 60 * 1000), dayType);
+                    if (dayType !== 'all') {
+                        while (!isValidDay(currentDate, dayType) && currentDate <= endDate) {
+                            currentDate.setDate(currentDate.getDate() + 1);
+                        }
+                    }
                     cycleCount++;
                     if (cycleCount > 1000) {
                         console.error('무한 루프 방지: 최대 1000 사이클');
                         break;
                     }
                 } else {
-                    currentDate = findNextValidDate(currentDate, dayType);
+                    currentDate.setDate(currentDate.getDate() + 1);
                 }
             }
-            console.log(`Added schedule: ${scheduleName}, cycleDays: ${cycleDays}`, events[scheduleName].dates);
+
+            // 주기 간격 디버깅
+            console.log(`Added schedule: ${scheduleName}, cycleDays: ${cycleDays}`);
+            console.log('Expected dates:', expectedDates);
+            if (expectedDates.length > 1) {
+                expectedDates.forEach((date, i) => {
+                    if (i > 0) {
+                        const diff = (new Date(date) - new Date(expectedDates[i-1])) / (1000 * 60 * 60 * 24);
+                        console.log(`Cycle ${i}: ${expectedDates[i-1]} -> ${date} (${diff} days)`);
+                    }
+                });
+            }
         }
 
         // 일정 재조정
@@ -184,16 +204,20 @@
 
                 // 공휴일 이후 일정 재조정
                 if (holidayDate <= metadata.endDate) {
-                    // 마지막 유지 일정 찾기
                     const beforeHolidayDates = originalEvents[scheduleName].dates
                         .filter(event => event.date < holidayDate)
                         .sort((a, b) => new Date(b.date) - new Date(a.date));
                     let resumeDate = holidayDate;
                     if (beforeHolidayDates.length > 0) {
                         const lastEventDate = new Date(beforeHolidayDates[0].date);
+                        // 마지막 유지 일정의 끝에서 주기 시작
                         resumeDate = new Date(lastEventDate);
-                        resumeDate.setDate(resumeDate.getDate() + metadata.cycleDays);
-                        resumeDate = findNextValidDate(new Date(resumeDate.getTime() - 24 * 60 * 60 * 1000), metadata.dayType);
+                        resumeDate.setDate(resumeDate.getDate() + metadata.cycleDays - metadata.durationDays + 1);
+                        if (metadata.dayType !== 'all') {
+                            while (!isValidDay(resumeDate, metadata.dayType) && resumeDate <= metadata.endDate) {
+                                resumeDate.setDate(resumeDate.getDate() + 1);
+                            }
+                        }
                     }
                     if (resumeDate <= metadata.endDate) {
                         addSchedule(
@@ -209,7 +233,7 @@
                     }
                 }
 
-                // 날짜 정렬 (중복은 이미 addSchedule에서 처리)
+                // 날짜 정렬
                 events[scheduleName].dates.sort((a, b) => new Date(a.date) - new Date(b.date));
             }
 
